reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__state.rs_line_309_col_9_002.log

*** crates/tracewake-core/src/state.rs:309:9: replace AgentState::needs_by_actor -> &BTreeMap<ActorId, BTreeMap<NeedKind, NeedState>> with Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))])))

*** mutation diff:
--- crates/tracewake-core/src/state.rs
+++ replace AgentState::needs_by_actor -> &BTreeMap<ActorId, BTreeMap<NeedKind, NeedState>> with Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))])))
@@ -301,17 +301,17 @@
             need_threshold_crossings: BTreeMap::new(),
             ordinary_life_episodes: BTreeMap::new(),
             candidate_goal_evaluations: BTreeMap::new(),
             continue_routine_arbitrations: BTreeMap::new(),
         }
     }
 
     pub fn needs_by_actor(&self) -> &BTreeMap<ActorId, BTreeMap<NeedKind, NeedState>> {
-        &self.needs_by_actor
+        Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /* ~ changed by cargo-mutants ~ */
     }
 
     pub fn intentions(&self) -> &BTreeMap<IntentionId, Intention> {
         &self.intentions
     }
 
     pub fn active_intention_by_actor(&self) -> &BTreeMap<ActorId, IntentionId> {
         &self.active_intention_by_actor


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ActorId: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:50
    |
309 | ...   Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /...
    |                                                ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ActorId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
126 | stable_id_type!(ActorId);
    | ------------------------ in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NeedKind: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:92
    |
309 | ...   Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /...
    |                                                                                          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `NeedKind`
   --> crates/tracewake-core/src/agent/need.rs:9:1
    |
  9 | pub enum NeedKind {
    | ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `NeedState: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:112
    |
309 | ...(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /* ~ changed by cargo-mutants ~ */
    |                                                  ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `NeedState`
   --> crates/tracewake-core/src/agent/need.rs:177:1
    |
177 | pub struct NeedState {
    | ^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 3 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `ids::ActorId: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:50
    |
309 | ...   Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /...
    |                                                ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ids::ActorId`
   --> crates/tracewake-core/src/ids.rs:78:9
    |
 78 |         pub struct $name(StableId);
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
126 | stable_id_type!(ActorId);
    | ------------------------ in this macro invocation
    = note: this error originates in the macro `stable_id_type` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `need::NeedKind: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:92
    |
309 | ...   Box::leak(Box::new(BTreeMap::from_iter([(Default::default(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /...
    |                                                                                          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `need::NeedKind`
   --> crates/tracewake-core/src/agent/need.rs:9:1
    |
  9 | pub enum NeedKind {
    | ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `need::NeedState: Default` is not satisfied
   --> crates/tracewake-core/src/state.rs:309:112
    |
309 | ...(), BTreeMap::from_iter([(Default::default(), Default::default())]))]))) /* ~ changed by cargo-mutants ~ */
    |                                                  ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `need::NeedState`
   --> crates/tracewake-core/src/agent/need.rs:177:1
    |
177 | pub struct NeedState {
    | ^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 3 previous errors

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
